--- a/cdk/package.json
+++ b/cdk/package.json
@@ -15,7 +15,7 @@
     "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@types/aws-lambda": "^8.10.152",
     "@types/jest": "^29.5.14",
-    "@types/node": "22.7.9",
+    "@types/node": "^22.17.1",
     "aws-cdk": "2.1024.0",
     "esbuild": "^0.25.8",
     "jest": "^29.7.0",
@@ -24,8 +24,13 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.50",
+    "@langchain/textsplitters": "^0.1.0",
+    "@pinecone-database/pinecone": "^6.1.2",
     "aws-cdk-lib": "2.208.0",
     "constructs": "^10.0.0",
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "langchain": "^0.3.30",
+    "pdf-parse": "^1.1.1"
   }
 }
