--- a/cdk/package.json
+++ b/cdk/package.json
@@ -24,13 +24,16 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
-    "@langchain/community": "^0.3.50",
+    "@langchain/community": "^0.3.51",
+    "@langchain/core": "^0.3.71",
+    "@langchain/openai": "^0.6.7",
     "@langchain/textsplitters": "^0.1.0",
     "@pinecone-database/pinecone": "^6.1.2",
     "aws-cdk-lib": "2.208.0",
     "constructs": "^10.0.0",
     "dotenv": "^17.2.1",
     "langchain": "^0.3.30",
+    "openai": "^5.12.2",
     "pdf-parse": "^1.1.1"
   }
 }
