--- a/cdk/package.json
+++ b/cdk/package.json
@@ -24,6 +24,7 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.873.0",
     "@langchain/community": "^0.3.51",
     "@langchain/core": "^0.3.71",
     "@langchain/openai": "^0.6.7",
