--- a/cdk/package.json
+++ b/cdk/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^17.2.1",
     "langchain": "^0.3.30",
     "openai": "^5.12.2",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "zod": "^4.1.0"
   }
 }
