--- a/cdk/package.json
+++ b/cdk/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.873.0",
     "@aws-sdk/client-sqs": "^3.873.0",
+    "@aws-sdk/client-ssm": "^3.879.0",
     "@aws-sdk/lib-dynamodb": "^3.873.0",
     "@langchain/community": "^0.3.51",
     "@langchain/core": "^0.3.71",
@@ -46,7 +47,9 @@
     "aws-cdk-lib": "2.208.0",
     "constructs": "^10.0.0",
     "dotenv": "^17.2.1",
+    "install": "^0.13.0",
     "langchain": "^0.3.30",
+    "npm": "^10.9.3",
     "openai": "^5.12.2",
     "pdf-parse": "^1.1.1",
     "zod": "^4.1.0"
